automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
 
   <body>
-    <script src="konami_code.js"></script>
+    <script src="konami_code.js">
+    const main = document.getElementById('main')
+  main.addEventListener('click', function('keydown') {
+ 	alert('Hurray!')
+ 	</script>
+
     <!-- Open this file in the browser and call `mocha.run()` in console to run tests -->
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
